--- a/css/arcodian.css
+++ b/css/arcodian.css
@@ -4,7 +4,7 @@
 .toggle-con {
   opacity: 1;
   position: absolute;
-  width: 100%;
+  width: 640px;
   z-index: 1000;
   top: 0;
   height: 0;
@@ -26,6 +26,7 @@
 
 .toggle-top {
   display: flex;
+  width: 100%;
   height: 40px;
   align-items: center;
   padding: 0 20px;
@@ -40,10 +41,14 @@
 details {
   transition: max-height 0.5s ease-in-out;
   max-height: 50px;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 summary {
   display: block;
+  outline: none;
+}
+summary::marker {
+  display: none;
 }
 
 .multi-accordion input {
