--- a/css/header.css
+++ b/css/header.css
@@ -15,7 +15,6 @@
   transform: translateY(0%);
   transition: all 0.5s ease-in;
 }
-
 header {
   padding: 0 50px;
   display: flex;
@@ -31,7 +30,7 @@ h1 .logo {
   display: block;
   height: 75px;
   width: 100px;
-  background: url(/image/sp_com_lasola.png);
+  background: url(/portfolio/02/image/sp_com_lasola.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -60,7 +59,6 @@ h1 .logo {
   color: #2c5b78;
   font-weight: 600;
 }
-
 .nav-menu span:hover,
 .side-nav-menu li span:hover {
   cursor: pointer;
@@ -90,7 +88,6 @@ h1 .logo {
   display: none;
   margin-right: 0;
 }
-
 .menu-wrap {
   display: flex;
   flex-shrink: 0;
@@ -107,11 +104,9 @@ h1 .logo {
 .menu li a:hover span {
   border-bottom: 1px solid white;
 }
-
 .menu li {
   margin-bottom: 12px;
 }
-
 /* visual */
 .visual {
   position: relative;
@@ -131,7 +126,7 @@ h1 .logo {
   transform: translateY(-50%);
   width: 30px;
   height: 46px;
-  background-image: url(/image/sp_com.png);
+  background-image: url(/portfolio/02/image/sp_com.png);
   color: transparent;
   z-index: 100;
 }
@@ -167,7 +162,7 @@ h1 .logo {
   width: 8px;
   height: 8px;
   color: transparent;
-  background-image: url(/image/sp_com.png);
+  background-image: url(/portfolio/02/image/sp_com.png);
   opacity: 0.5;
 }
 .con-btn a.active {
