--- a/css/media.css
+++ b/css/media.css
@@ -63,13 +63,12 @@
     transform: translateY(-50%);
     width: 18px;
     height: 32px;
-    background-image: url(/image/sp_com.png);
+    background-image: url(/portfolio/02/image/sp_com.png);
   }
   .mobile-visual .prev {
     left: 15px;
     background-position: -718px -90px;
   }
-
   .mobile-visual .next {
     right: 15px;
     background-position: -687px -90px;
@@ -78,7 +77,6 @@
     width: 100%;
     height: 400px;
   }
-
   /* product */
   .product-contents {
     display: flex;
@@ -90,23 +88,19 @@
   .product-link:first-child::after {
     width: 240px;
   }
-
   /* video */
-
   .video-container {
     width: 100%;
   }
   .video-container video {
     width: 95%;
   }
-
   /* magazine */
   .magazine {
     height: 600px;
     width: 100%;
     overflow-x: hidden;
   }
-
   .mag-container .img-btn {
     display: none;
   }
@@ -117,7 +111,6 @@
     width: 100%;
     display: block;
   }
-
   /* popular */
   .pop-contents {
     flex-wrap: wrap;
@@ -147,8 +140,8 @@
     height: 480px;
   }
   .ect-contents {
+    flex-shrink: 1;
     padding: 0 20px;
-
     justify-content: space-between;
     height: 75%;
     margin-bottom: -10px;
@@ -160,6 +153,7 @@
     display: block;
     padding: 0 20px;
   }
+
   .mobile-cards .card-info {
     display: flex;
     align-items: center;
@@ -180,9 +174,7 @@
     opacity: 1;
     margin: 0 20px;
   }
-
   /* footer */
-
   .footer-btm > p {
     display: none;
   }
@@ -224,84 +216,3 @@
     margin-bottom: 40px;
   }
 }
-
-/* 
-  .nav-side .logo {
-    width: 65px;
-  }
-  .mob-slide img {
-    width: 100%;
-  }
-  .visual {
-    display: none;
-  }
-  .mobile-visual {
-    display: block;
-  }
-
-  .mobile-img .mob-slide img {
-    width: 100%;
-    height: auto;
-  }
-  .product-contents {
-    flex-wrap: wrap;
-  } */
-/* .video-container {
-    margin: 0 auto;
-  }
-  .video-container video {
-    width: 95%;
-  } */
-
-/* magazine
-/* .box-right {
-    display: none;
-  }
-  .mag-container {
-    height: 650px;
-  }
-  /* popular */
-/* .pop-bg {
-    padding: 0 20px;
-    height: 980px;
-  }
-  .pop-contents {
-    display: flex;
-    flex-wrap: wrap;
-    flex-shrink: 1;
-   
-    width: 100%;
-  } */
-/* .pop-item {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-    width: 48%;
-  }
-  .pop-item img {
-    object-fit: cover;
-  }
-  .pop-top {
-    margin-bottom: 18px;
-  }
-  */
-/* blog */
-
-/* .blog-con {
-    padding: 0 20px;
-    height: 630px;
-  } */
-/* .blog-item p {
-    display: none;
-  }
-  .blog-item {
-    height: auto;
-  } */
-/* .viewport {
-    max-width: 90vw;
-  } */
-/* youtube */
-/* .you-viewport {
-    width: 90vw;
-  } */
