--- a/css/header.css
+++ b/css/header.css
@@ -30,7 +30,7 @@ h1 .logo {
   display: block;
   height: 75px;
   width: 100px;
-  background: url(/portfolio/02/image/sp_com_lasola.png);
+  background: url(/image/sp_com_lasola.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -126,7 +126,7 @@ h1 .logo {
   transform: translateY(-50%);
   width: 30px;
   height: 46px;
-  background-image: url(/portfolio/02/image/sp_com.png);
+  background-image: url(/image/sp_com.png);
   color: transparent;
   z-index: 100;
 }
@@ -162,7 +162,7 @@ h1 .logo {
   width: 8px;
   height: 8px;
   color: transparent;
-  background-image: url(/portfolio/02/image/sp_com.png);
+  background-image: url(/image/sp_com.png);
   opacity: 0.5;
 }
 .con-btn a.active {
