--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,9 @@
   transform: translateY(0%);
   transition: all 0.5s ease-in;
 }
+.header-menu.none {
+  pointer-events: none;
+}
 header {
   padding: 0 50px;
   display: flex;
@@ -93,6 +96,7 @@ h1 .logo {
   flex-shrink: 0;
   padding: 26px 190px;
 }
+
 .menu li a {
   color: white;
   display: block;
